infra/k8s/frigate/overlays/stage/HTTPRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate-httproute
  namespace: frigate
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
      sectionName: https-stage-wildcard

  hostnames:
    - frigate.stage.codedang.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: frigate
          port: 8971
